Closed
Bug 1888498
Opened 8 months ago
Closed 8 months ago
MOZ_ASSERT if empty text content in clipboard for DLP
Categories
(Firefox :: Data Loss Prevention, defect)
Firefox
Data Loss Prevention
Tracking
()
RESOLVED
FIXED
126 Branch
Tracking | Status | |
---|---|---|
firefox126 | --- | fixed |
People
(Reporter: gstoll, Assigned: gstoll)
Details
Attachments
(1 file)
I can't figure out how to reproduce this, but I got into a state where there was text on the clipboard but it was an empty string, and we hit a MOZ_ASSERT in ConvertToProtobuf(). We should handle this just like there isn't any text on the clipboard.
Assignee | ||
Updated•8 months ago
|
Assignee: nobody → gstoll
Status: NEW → ASSIGNED
Assignee | ||
Comment 1•8 months ago
|
||
Pushed by gstoll@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/67dab685381a
don't pass an empty string to Content Analysis r=dlp-reviewers,handyman
Comment 3•8 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 months ago
status-firefox126:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•