Bug 1888498 - don't pass an empty string to Content Analysis r=dlp-reviewers,handyman

Differential Revision: https://phabricator.services.mozilla.com/D206053